<resources>
    <string name="app_name">Warp Time Magic App</string>
    <string name="firsttitle">What is this app for?</string>
    <string name="firstsub">"Warp Time" is an awesome magic trick which consists of asking the audience to choose a number up to 10, after that you pull out your phone and once you turn it on.. the clock magically goes back in time a number of minutes matching the number they guessed, after this you ask the audience to pull out their phones and check that their clocks have went the exact same time into the past too!</string>
    <string name="secondtitle">How is this done?</string>
    <string name="secondsub">The app has a "black screen" mode where it automatically turns down brightness and puts on a black screen to create the illusion of the screen being off. Why? so the magician can quickly input the number the audience chose into the phone in a sneaky way (i\'ll show you in a bit), once the magician has given the app the audiance\'s chosen number, a simple double tap on the screen will make it "turn on" but in reality the black layer is removed showing a fake lockscreen, the clock will slowly go in the past but in reality it only added that number to the time and then acted like it was going back in time by removing it, that\'s why after warping back in time, their phones will say the same time as well! so we\'re just adding say 7 minutes before removing the black layer, and then removing 7 minutes!</string>
    <string name="thirdtitle">How does the magician sneakily give the number to the app?</string>
    <string name="thirdsub">The black layer is split into three sections vertically, the bottom section adds 1 minute to the clock, the middle section adds 2 minutes to the clock and the top one adds 3 minutes, let\'s say the audience had chosen the number 7, it is formed as 3 + 3 + 1 so all you have to do is press twice on the top section (you will know it worked because it slightly vibrates every time u press) and press once at the bottom, that\'s it! 7 minutes added to the clock.</string>
    <string name="fourthtitle">How do we tell the app that we are done adding minutes to the clock?</string>
    <string name="fourthsub">The bottom section that adds 1 minute to the clock is in reality split into 2 sections, a left section which consists of one third of the width is infact a "confirm" button which vibrates a little longer than others to differentiate, okay? to add 1 minute to the clock you can only tap on the two thirds of the bottom section that are on the right (i\'ll draw you a layout during training don\'t worry)</string>
    <string name="fifthtitle">I mistakenly added more minutes than intended, how do i reset?</string>
    <string name="fifthsub">So same story as the bottom layer, for the top layer i gave one third of the width to a "reset" button which resets everything to zero</string>
    <string name="sixthtitle">Anything more we need to know?</string>
    <string name="sixthsub">If you add more than 10 minutes to the clock, the app will automatically remove all of them and reset it to current time and give you a long vibration, i just thought anything more than 10 minutes was unnecessary, if enough people want more than 10 i\'ll update the app and add a setting for a limit okay!</string>
    <string name="sixthandahalftitle">Also!</string>
    <string name="sixthandahalfsub">This trick is advisable to be done right when time is just into a new minute so the trick isn\'t wrong or delayed by 1, this is why i made the app vibrate your phone a relatively longer vibration at the start of every minute so you know when to start the trick without checking time!</string>
    <string name="sixthagaintitle">And also!</string>
    <string name="sixthagainsub">I find it hard to know if i actually turned the screen on to sneakily add the time without looking so i always had to test by pressing to see if it\'s actually on, because of that inconvenience i made the app double vibrate quickly when opened/when screen was unlocked into it</string>
    <string name="checkagaintitle">Warning!</string>
    <string name="checkagainsub">For convenience i made the app turn down brightness when showing the black layer so it\'s less apparent that the screen is fakely off and not actually off, the issue with that is you must have auto brightness setting turned off in your settings or else my app cannot change brightness at all! i will prompt you for the permission later on if needed</string>
    <string name="seventhtitle">Can we have a quick training?</string>
    <string name="seventhsub">Of cours! If you want a tutorial click Yes! i will not lower the brightness during training so you can see the layers split by white lines</string>
    <string name="yes">Yes!</string>
    <string name="imgood">No I\'m Good</string>
    <string name="maintitle">Warp Time</string>
    <string name="explain">This means brightness will be lowered for the black screen to be less visible, it will also cause the tutorial page to hide forever and it can only be shown again by reinstalling the app or clearing its data</string>
    <string name="yesser">Yes</string>
    <string name="nogoback">No Go Back!</string>
    <string name="yousure">Are you sure?</string>
    <string name="do_it_again">Do It Again!</string>
    <string name="back_to_tutorial_page">Back To Tutorial Page</string>
    <string name="zeraw">0</string>
    <string name="done">Done!</string>
    <string name="passedten">You have passed 10 minutes! clock has been reset to current time</string>
    <string name="minsahead"> minutes ahead </string>
    <string name="clockhas"> Clock is now </string>
    <string name="doubletap">Double tap\nanywhere</string>
    <string name="donttt">Don\'t double tap here!</string>
    <string name="yesdo">Double tap anywhere</string>
    <string name="clockreset">Clock has been reset to current time</string>
    <string name="newmin">Time is into a new minute! it is advised to do the trick now!</string>
    <string name="semicol">,</string>
    <string name="space"> </string>
    <string name="add1">Add\n1 minute</string>
    <string name="add2">Add\n2 minutes</string>
    <string name="add3">Add\n3 minutes</string>
    <string name="confirmos">Confirm\nNumber</string>
    <string name="res">Reset</string>
    <string name="font1">fonts/montserrat/Montserrat-Thin.ttf</string>
    <string name="font2">fonts/montserrat/Montserrat-Light.ttf</string>
    <string name="no">no</string>
    <string name="font3">Tajawal-Medium.ttf</string>
    <string name="twodots">:</string>
    <string name="fonter">Tajawal-Light.ttf</string>
    <string name="anothafont">Tajawal-Medium.ttf</string>
    <string name="yas">yes</string>
    <string name="gggg">Try Again With Brightness Effect</string>
    <string name="nomoretutorial">No More Tutorial</string>
    <string name="importanttitle">Important!</string>
    <string name="importanttext">After the trick is finished, to go back to the black screen from the fake clock you must either click your phone\'s back button or exit the app and join it again (you don\'t have to completely close it), you can also just turn the screen off and back on and it will go back to the black screen to do the trick again!</string>
</resources>
