<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="magicapps.warptime.Tutorial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:gravity="center"
            android:paddingTop="60dp"
            android:paddingBottom="60dp"
            android:text="Warp Time"
            android:textColor="#444"/>
        <TextView
            android:text="@string/firsttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="17sp"/>
        <TextView
            android:text="@string/secondtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="17sp"/>
        <TextView
            android:text="@string/thirdtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirdsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="17sp"/>
        <TextView
            android:text="@string/fourthtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourthsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="17sp"/>
        <TextView
            android:text="@string/fifthtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifthsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="17sp"/>
        <TextView
            android:text="@string/sixthtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixthsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="17sp"/>
        <TextView
            android:text="@string/sixthandahalftitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixthandahalfsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="17sp"/>
        <TextView
            android:text="@string/sixthagaintitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixthagainsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="17sp"/>
        <TextView
            android:text="@string/checkagaintitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkagainsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="17sp"/>
        <TextView
            android:text="@string/seventhtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titlesize"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="@dimen/betweentitleandtext"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seventhsub"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textSize="17sp"/>
        <Button
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes!"
            android:background="@drawable/greenbutton"
            android:textSize="20sp"
            android:paddingStart="30dp"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:onClick="YesTutorialClicked"
            android:layout_marginBottom="18dp"
            />
        <Button
            android:onClick="notutorialClicked"
            android:layout_marginBottom="27dp"
            android:background="@drawable/redbutton"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No I'm Good"/>
    </LinearLayout>

</ScrollView>
